<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MasukActivity"
    android:background="@color/white">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_masuk"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgMasuk"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:src="@drawable/img_masuk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/inputUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        app:layout_constraintTop_toBottomOf="@id/imgMasuk">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/username_label"
            android:textColor="@color/white"
            android:textSize="45px" />

        <EditText
            android:id="@+id/xetUsername"
            android:lines="1"
            android:paddingLeft="16dp"
            android:fontFamily="@font/poppins_regular"
            android:background="@drawable/bg_input_edit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/username_label"
            android:textColorHint="@color/abu_abu"
            android:textColor="@color/black"
            android:inputType="textEmailAddress"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/inputPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/inputUsername">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/password_label"
            android:textSize="45px"
            android:textColor="@color/white"
            android:layout_marginBottom="6dp"/>

        <EditText
            android:id="@+id/xetPassword"
            android:lines="1"
            android:paddingLeft="16dp"
            android:fontFamily="@font/poppins_regular"
            android:background="@drawable/bg_input_edit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/password_label"
            android:textColorHint="@color/abu_abu"
            android:textColor="@color/black"
            android:inputType="textPassword"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnMasuk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/bg_button"
        android:text="@string/masuk_label"
        android:textColor="@color/hijau"
        android:textAllCaps="false"
        android:fontFamily="@font/poppins_medium"
        app:layout_constraintTop_toBottomOf="@id/inputPassword"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/btnMasuk">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/daftar_dulu_label"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tvDaftar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:text="@string/daftar_sekarang"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/hijau_pale"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>